<resources>
    <string name="app_name">FoodCourt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="menu">Menu</string>
    <string name="product">Product</string>
    <string name="email">Email</string>
    <string name="price_default">Rp 0</string>
    <string name="item_default">0 items</string>
    <string name="empty_product">Menu untuk kategori ini kosong, Tambahkan di menu tambah product!</string>
    <string name="report">Report Transaction</string>
    <string name="logout">Logout</string>
    <string name="new_photo">New Photo</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="save">Save</string>
    <string name="order">Order</string>
    <string name="total_price">Total Price</string>
    <string name="checkout">Checkout</string>
    <string name="buyer_s_name">Buyer\'s name</string>
    <string name="buyer">Buyer</string>
    <string name="dine_in">Dine in</string>
    <string name="dine_in_des">Add order table number.</string>
    <string name="table_number">Table number</string>
    <string name="take_away">Take Away</string>
    <string name="pay">Pay</string>
    <string name="back">Back</string>
    <string-array name="pictures">
        <item>Ambil foto</item>
        <item>Dari galeri</item>
    </string-array>

    <string-array name="categories">
        <item>Minuman</item>
        <item>Makanan</item>
        <item>Snack</item>
        <item>Cemilan</item>
    </string-array>
</resources>