<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/menu"
                android:textColor="@color/titleText"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btnPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:background="@drawable/bg_cirle"
                android:padding="16dp"
                android:src="@drawable/ic_baseline_person_white"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <TextView
                android:id="@+id/txvEmptyText"
                android:text="@string/empty_product"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_marginHorizontal="@dimen/space_quadruple"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/svEvent"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/space_triple"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/bg_searchview"
                app:defaultQueryHint="Mau cari apa?"
                app:layout_constraintTop_toBottomOf="@+id/btnPerson"
                app:queryHint="Mau cari apa?" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/svEvent"
                tools:listitem="@layout/item_category" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/product"
                android:textColor="@color/titleText"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvCategories" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMenu"
                tools:listitem="@layout/item_menu"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/space_double"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <ProgressBar
                android:id="@+id/loadingCircular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/rvMenu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.cardview.widget.CardView
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="32dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/secondary_color"
            android:layout_width="185dp"
            android:layout_height="75dp"
            >

            <TextView
                android:id="@+id/txvTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:textStyle="bold"
                android:layout_toStartOf="@id/btnCart"
                android:layout_marginTop="-12dp"
                android:fontFamily="@font/lato"
                android:textSize="@dimen/font_medium"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnCart"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/price_default" />

            <TextView
                android:id="@+id/txvCartQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txvTotalPrice"
                android:layout_toStartOf="@id/btnCart"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/txvTotalPrice"
                app:layout_constraintTop_toBottomOf="@+id/txvTotalPrice"
                android:text="@string/item_default" />

            <ImageButton
                android:id="@+id/btnCart"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:padding="12dp"
                android:src="@drawable/ic_shopping_bag"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="12dp"
                android:background="@drawable/circle"
                android:backgroundTint="@color/grey_800"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/loadingLayout"
        android:visibility="gone"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmeringLoadingHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/smh_home" />

        </com.facebook.shimmer.ShimmerFrameLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>