<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.add.AddProductFragment">

    <include
        android:id="@+id/appBar"
        layout="@layout/toolbar_back_name" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageButton
                android:id="@+id/btnProductImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/space_quadruple"
                android:background="@drawable/circle"
                android:backgroundTint="@color/grey_400"
                android:src="@drawable/ic_camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_double"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/new_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnProductImage" />

            <TextView
                android:id="@+id/txvCategoryStatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_double"
                android:layout_marginTop="@dimen/space_quadruple"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/category"
                android:textSize="@dimen/font_big"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCategories"
                android:layout_marginTop="@dimen/space_double"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/txvCategoryStatic"
                tools:listitem="@layout/item_category" />

            <TextView
                android:id="@+id/txvNameStatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_triple"
                android:layout_marginHorizontal="@dimen/space_double"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/name"
                android:textSize="@dimen/font_big"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvCategories" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_double"
                android:layout_marginTop="@dimen/space"
                android:background="@drawable/bg_input"
                android:hint="@string/name"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/txvNameStatic" />


            <TextView
                android:id="@+id/txvPriceStatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_double"
                android:layout_marginTop="@dimen/space_double"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/price"
                android:textSize="@dimen/font_big"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtName" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_double"
                android:layout_marginTop="@dimen/space_double"
                app:layout_constraintTop_toBottomOf="@+id/txvPriceStatic"
                tools:layout_editor_absoluteX="16dp">

                <TextView
                    android:id="@+id/txPriceStaticcc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_price"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="Rp."
                    android:textColor="@color/secondary_color"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txvPriceStatic" />


                <EditText
                    android:id="@+id/edtPrice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_price_right"
                    android:hint="@string/price"
                    android:inputType="number"
                    android:padding="16dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/txPriceStaticcc"
                    app:layout_constraintTop_toBottomOf="@+id/txvPriceStatic" />

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="@dimen/space_quintuple"
                android:background="@drawable/bg_button"
                android:padding="10dp"
                android:paddingVertical="@dimen/space_double"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

            <View
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
                android:layout_height="@dimen/space_triple"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <View
        android:id="@+id/bg_dim"
        android:visibility="gone"
        android:background="@color/black_dim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>